--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "loader-utils": "^0.2.7",
     "strip-json-comments": "^1.0.2",
-    "tslint": "^2.2.0-beta"
+    "tslint": "^2.2.0-beta",
+    "typescript": "^1.5.0-beta"
   }
 }
