Update TSLint to 3.0.0 and switch to peer dependency

--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "url": "https://github.com/wbuchwalter/tslint-loader/issues"
   },
   "homepage": "https://github.com/wbuchwalter/tslint-loader",
+  "peerDependencies": {
+    "tslint": "^3.0.0"
+  },
   "dependencies": {
     "loader-utils": "^0.2.7",
     "strip-json-comments": "^1.0.2",
-    "tslint": "^2.5.0-beta",
     "typescript": "^1.6.0-beta"
   }
 }
