--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
   },
   "dependencies": {
     "loader-utils": "^0.2.7",
-    "strip-json-comments": "^1.0.2",
-    "typescript": "^1.6.0-beta"
+    "strip-json-comments": "^1.0.2"
   }
 }
