--- a/.editorconfig
+++ b/.editorconfig
@@ -12,3 +12,8 @@ insert_final_newline = true
 [*.{js,json}]
 indent_style = space
 indent_size = 2
+
+# 4 space indentation
+[*.md]
+indent_style = space
+indent_size = 4
