--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "loader-utils": "^0.2.7",
     "mkdirp": "^0.5.1",
+    "object-assign": "^4.0.1",
     "rimraf": "^2.4.4",
     "strip-json-comments": "^1.0.2"
   }
