Make a distributed lint

--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
   },
   "homepage": "https://github.com/wbuchwalter/tslint-loader",
   "peerDependencies": {
-    "tslint": "^3.0.0"
+    "tslint": "^3.0.0",
+    "process-pool-singleton": "^1.1.0"
   },
   "dependencies": {
     "loader-utils": "^0.2.7",
