chore: added ESLint support

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "tslint loader for webpack",
   "main": "index.js",
   "scripts": {
+    "lint": "eslint --ext .js .",
     "deploy": "np --skip-cleanup",
     "test": "mocha ./test/loader.spec.js"
   },
@@ -37,6 +38,7 @@
     "awesome-typescript-loader": "^3.0.0-beta.3",
     "chai": "^3.5.0",
     "enhanced-resolve": "^2.3.0",
+    "eslint": "3.11.1",
     "mocha": "^3.1.2",
     "np": "^2.10.1",
     "tslint": "^4.0.0",
