--- a/package.json
+++ b/package.json
@@ -36,14 +36,15 @@
     "rimraf": "^2.4.4"
   },
   "devDependencies": {
-    "awesome-typescript-loader": "^3.0.0-beta.3",
+    "awesome-typescript-loader": "^3.0.0-beta.9",
     "chai": "^3.5.0",
     "enhanced-resolve": "^2.3.0",
+    "es6-promisify": "^5.0.0",
     "eslint": "3.11.1",
-    "mocha": "^3.1.2",
+    "mocha": "^3.2.0",
     "np": "^2.10.1",
     "tslint": "^4.0.0",
-    "typescript": "^2.0.10",
+    "typescript": "^2.1.1",
     "webpack": "^1.13.3"
   }
 }
