--- a/package.json
+++ b/package.json
@@ -32,19 +32,19 @@
   "dependencies": {
     "loader-utils": "^0.2.7",
     "mkdirp": "^0.5.1",
-    "object-assign": "^4.0.1",
-    "rimraf": "^2.4.4"
+    "object-assign": "^4.1.1",
+    "rimraf": "^2.4.4",
+    "semver": "^5.3.0"
   },
   "devDependencies": {
-    "awesome-typescript-loader": "^3.0.0-beta.9",
+    "awesome-typescript-loader": "^3.0.3",
     "chai": "^3.5.0",
-    "enhanced-resolve": "^2.3.0",
     "es6-promisify": "^5.0.0",
-    "eslint": "3.11.1",
+    "eslint": "3.15.0",
     "mocha": "^3.2.0",
-    "np": "^2.10.1",
-    "tslint": "^4.0.0",
-    "typescript": "^2.0.10",
+    "np": "^2.12.0",
+    "tslint": "^4.4.2",
+    "typescript": "^2.1.6",
     "webpack": "^1.13.3"
   }
 }
