--- a/package.json
+++ b/package.json
@@ -4,10 +4,19 @@
   "description": "tslint loader for webpack",
   "main": "index.js",
   "scripts": {
-    "deploy": "np --skip-cleanup",
-    "lint": "eslint --ext .js .",
-    "mocha": "mocha ./test/loader.spec.js --timeout 5000",
-    "test": "npm run mocha && npm run lint"
+    "clean": "rimraf -g './{,!(node_modules)/**/}*.js'",
+    "tslint": "tslint -c ./tslint.json --project . --exclude test/fixtures/app/**/*.ts",
+    "tsc": "tsc --pretty",
+    "tsc:watch": "npm run tsc -- --watch",
+    "mocha": "mocha test/loader.spec.js --timeout 10000",
+    "lint": "npm run tslint",
+    "prebuild": "npm run lint",
+    "build": "npm run clean & npm run tsc",
+    "pretest": "npm run build",
+    "test": "npm run mocha",
+    "watch": "npm run tsc:watch",
+    "predeploy": "npm run build",
+    "deploy": "np --skip-cleanup"
   },
   "repository": {
     "type": "git",
@@ -27,24 +36,33 @@
   },
   "homepage": "https://github.com/wbuchwalter/tslint-loader",
   "peerDependencies": {
-    "tslint": ">=4.0.0"
+    "tslint": ">=5",
+    "webpack": ">=1"
   },
   "dependencies": {
-    "loader-utils": "^1.0.2",
-    "mkdirp": "^0.5.1",
-    "object-assign": "^4.1.1",
-    "rimraf": "^2.4.4",
-    "semver": "^5.3.0"
+    "es6-promisify": "^5",
+    "loader-utils": "^1",
+    "mkdirp": "^0",
+    "lodash": "^4",
+    "rimraf": "^2"
   },
   "devDependencies": {
-    "awesome-typescript-loader": "^3.0.3",
-    "chai": "^3.5.0",
-    "es6-promisify": "^5.0.0",
-    "eslint": "^3.15.0",
-    "mocha": "^3.2.0",
-    "np": "^2.12.0",
-    "tslint": "^4.4.2",
-    "typescript": "^2.1.6",
-    "webpack": "^2.2.1"
+    "@types/chai": "^4",
+    "@types/es6-promisify": "^5",
+    "@types/loader-utils": "^1",
+    "@types/lodash": "^4",
+    "@types/mkdirp": "^0",
+    "@types/mocha": "^2",
+    "@types/rimraf": "^2",
+    "@types/node": "^8",
+    "@types/webpack": "^3",
+    "awesome-typescript-loader": "~3.2",
+    "chai": "~4.1",
+    "mocha": "~3.5",
+    "np": "~2.16",
+    "tslint": "~5.7",
+    "tslint-microsoft-contrib": "~5.0",
+    "typescript": "~2.5",
+    "webpack": "~3.6"
   }
 }
